responsividade tela login

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -124,3 +124,14 @@ html {
     @apply bg-background text-foreground;
   }
 }
+
+
+.card-responsivo {
+    @media (height <= 740px) {
+        padding: 5px;
+    }
+}
+
+.card-login-responsivo{
+    
+}
